k8s/namespaces.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "magellan",
    "labels": {
      "name": "magellan"
    }
  }
}
