k8s/node-proxy-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    co.elastic.description: some other description
    co.elastic.ecs: some other group
  creationTimestamp: null
  labels:
    io.kompose.service: node-proxy-api
  name: node-proxy-api
spec:
  replicas: 5
  selector:
    matchLabels:
      io.kompose.service: node-proxy-api
  strategy: {}
  template:
    metadata:
      annotations:
        co.elastic.description: some other description
        co.elastic.ecs: some other group
      creationTimestamp: null
      labels:
        io.kompose.network/magellan-back: "true"
        io.kompose.network/magellan-front: "true"
        io.kompose.service: node-proxy-api
    spec:
      containers:
        - image: rhodesjason/magellan-nodejs-backend-1
          name: node-proxy-api
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
