k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    co.elastic.description: some description
    co.elastic.group: some group
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  type: LoadBalancer
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
