k8s/node-proxy-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    co.elastic.description: some other description
    co.elastic.ecs: some other group
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: node-proxy-api
  name: node-proxy-api
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: node-proxy-api
status:
  loadBalancer: {}
