k8s/magellan-front-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: magellan-front
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/magellan-front: "true"
  podSelector:
    matchLabels:
      io.kompose.network/magellan-front: "true"
